More work on invite-only/closed list stuff

--- a/dada/extras/Flash/email_subscription_form.pod
+++ b/dada/extras/Flash/email_subscription_form.pod
@@ -111,6 +111,8 @@ The error values are as follows:
 
 =item * blacklisted
 
+=item * invite_only_list
+
 =item * closed_list
 
 =item * invalid_email
